# sber-agents

./: README.md  ber-agents10-guard  fix-rebase.ps1  replace-secret.ps1  temp-naive-rag.ipynb
02-llm-api/: Makefile  report.md  run.bat
02-llm-api/src/: bot.py  bot.py.tmp
03-aidd/: .env.example  pyproject.toml
03-aidd/.cursor/rules/: conventions.mdc
03-aidd/docs/: conventions.md  idea.md  tasklist.md  vision.md
03-aidd/src/app/: config.py  logging.py
03-aidd/src/app/bot/: handlers.py  main.py
03-aidd/src/app/llm/: client.py
03-aidd/src/app/memory/: session.py
04-multimodal/: .gitignore  CHECK_ROLES.md  HOW_TO_CHECK_FOLDER_ROLES.md  Makefile  OLLAMA_SETUP.md  OPENAI_WHISPER_SETUP.md  README.md  SPEECHKIT_SETUP.md  SPEECHKIT_TROUBLESHOOTING.md  SPEECH_PROVIDERS.md  SPEECH_TO_TEXT_ANALYSIS.md  VOSK_SETUP.md  config.yaml  copy_key.bat  copy_ssh_key.ps1  fix_ssh_key.ps1  pyproject.toml  report.md  task_report_template.md  test_speechkit.py
04-multimodal/bot/: config.py  llm_client.py  main.py  models.py  storage.py
05-rag-langchain/: .env.example  1.txt  README.md  pyproject.toml  report.md
05-rag-langchain/@data/: sberbank_help_documents.json
05-rag-langchain/docs/: conventions.md  idea.md  tasklist.md  vision.md
05-rag-langchain/src/app/: config.py
05-rag-langchain/src/app/bot/: handlers.py  main.py
05-rag-langchain/src/app/indexing/: __init__.py  loader.py  vector_store.py
05-rag-langchain/src/app/llm/: client.py
05-rag-langchain/src/app/rag/: __init__.py  chain.py
06-monitoring-qa/: Makefile  NEXT_STEPS.md  README.md  debug_examples.py  env.example  fix_env.ps1  pyproject.toml  setup_ollama_models.ps1
06-monitoring-qa/.cursor/rules/: workflow.mdc
06-monitoring-qa/datasets/: 06-rag-qa-dataset.json
06-monitoring-qa/docs/: idea.md  tasklist.md  vision.md
06-monitoring-qa/scripts/: generate_pdf.py
06-monitoring-qa/src/: indexer_with_json.py
06-monitoring-qa/src/app/: config.py
06-monitoring-qa/src/app/bot/: handlers.py
06-monitoring-qa/src/app/evaluation/: __init__.py  evaluation.py
06-monitoring-qa/src/app/indexing/: __init__.py  loader.py  vector_store.py
06-monitoring-qa/src/app/memory/: session.py
06-monitoring-qa/src/app/rag/: chain.py
06-monitoring-qa/src/app/synthesis/: __init__.py  dataset_synthesizer.py
07-advanced-rag/: .dockerignore  ASSIGNMENT_REPORT.md  DEEPSEEK_QUICK_SETUP.md  Dockerfile  LLMOST_QUICK_SETUP.md  LOCAL_SETUP.md  Makefile  QUICK_START_DEPLOY.md  RAGAS_LLMOST_SETUP.md  README.md  env.example  pyproject.toml  render.yaml  report.md  setup-env.ps1
07-advanced-rag/datasets/: 06-rag-qa-dataset.json
07-advanced-rag/docs/: available-models-russia.md  deepseek-setup.md  deployment-render-troubleshooting.md  deployment-render.md  evaluation-issues.md  evaluation-metrics-results.md  gigachat-setup.md  (+22 more)
08-agents-langgraph/: .gitignore  README_hm.md  pyproject.toml  report.md  telegram_message.txt
10-guard/: env.example  report.md
docs/: idea.md
(+37 files in other folders)
