[project]
name = "sber_agents_aidd_bot"
version = "0.1.0"
description = "LLM-ассистент в виде Telegram-бота"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "aiogram==3.*",
    "openai==1.*",
    "python-dotenv==1.*",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
color = "always"

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I"] # Basic error, flake8, warnings, imports

[tool.black]
line-length = 120
