[project]
name = "sber_agents_aidd_bot"
version = "0.1.0"
description = "LLM-ассистент в виде Telegram-бота"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "aiogram>=3.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.1",
    "langchain-community>=0.0.1",
    "pypdf>=6.0.0",
    "langchain-ollama>=0.0.1",
    "jq>=1.0.0",
    "ragas>=0.1.0",
    "datasets>=2.14.0",
    "langsmith>=0.1.0",
    "langchain-huggingface>=0.0.1",  # Опционально, для HuggingFace эмбеддингов
    "sentence-transformers>=2.0.0",  # Требуется для HuggingFace embeddings
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I"] # Basic error, flake8, warnings, imports

[tool.black]
line-length = 120
